CheckIn:Fix a problem that may lead to compilation error in early version of JDK1.4